# signal-clash

./: .gitignore  DESIGN.md  README.md  next.config.ts  package-lock.json  package.json
anchor/: Anchor.toml
anchor/idl/: signal_clash_match.json  signal_clash_match.ts  signal_clash_vault.json  signal_clash_vault.ts
anchor/programs/signal-clash-match/: Cargo.toml
anchor/programs/signal-clash-match/src/: lib.rs
anchor/programs/signal-clash-vault/: Cargo.toml
anchor/programs/signal-clash-vault/src/: lib.rs
app/: globals.css  layout.tsx  page.tsx  providers.tsx  template.tsx
app/arena/: page.tsx
app/docs/: page.tsx
app/leaderboard/: page.tsx
app/lobby/: page.tsx
app/profile/: page.tsx
app/profile/[wallet]/: page.tsx
app/room/[roomId]/: page.tsx
app/tournament/[id]/: page.tsx
components/: ArenaIntro.tsx  CosmicBackground.tsx  CreateRoomForm.tsx  CreateTournamentForm.tsx  CustomCursor.tsx  Header.tsx  Hero.tsx  HeroScene.tsx  HeroSignal.tsx  PredictionControls.tsx  ResultCard.tsx  RoomCard.tsx  RoundTimer.tsx  Scoreboard.tsx  ShinyText.tsx  TournamentCard.tsx  TournamentLeaderboard.tsx  TradingViewChart.tsx  WalletButton.tsx
docs/: ARCHITECTURE.md  anchor-vault-program.rs  match-lib-staging.rs
docs/superpowers/plans/: 2026-06-11-cyber-arcade-hud-redesign.md
lib/: config.ts  navLinks.ts
lib/game/: binancePriceFeed.ts  bot.ts  engine.ts  instances.ts  markets.ts  matchController.ts  mockPriceFeed.ts  roomReducers.ts  scoring.ts  tournament.ts  types.ts
lib/magicblock/: index.ts  mockAdapter.ts  supabaseAdapter.ts  types.ts
lib/solana/: client.ts  match.ts  matchEr.ts  settlement.ts  vault.ts
lib/state/: lobbyStore.ts  playerStats.ts  useMatch.ts
lib/supabase/: client.ts
supabase/: schema.sql
tests/: engine.test.ts  landing-content.test.ts  scoring.test.ts  tournament.test.ts
(+1 files in other folders)
